--- a/templates/chatbot.mustache
+++ b/templates/chatbot.mustache
@@ -1,111 +1,131 @@
 <style>
     #floating-btn {
-    position: fixed;
-    right: 80px;
-    bottom: 20px;
-    z-index: 50;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 64px;
-    height: 64px;
-    background-color: #2563eb;
-    font-size: 32px;
-    border-radius: 50%;
-    cursor: pointer;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-    transition: transform 0.2s, background-color 0.2s;
+        position: fixed;
+        right: 20px;
+        bottom: 60px;
+        z-index: 50;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 64px;
+        height: 64px;
+        background-color: {{primary_color}};
+        font-size: 32px;
+        border-radius: 50%;
+        cursor: pointer;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+        transition: transform 0.2s, background-color 0.2s;
     }
 
     #floating-btn:hover {
-    background-color: #3b82f6;
-    transform: scale(1.05);
+        background-color: color-mix(in srgb, {{primary_color}}, black 10%);
+        transform: scale(1.05);
     }
 
     #chatbot {
-    position: fixed;
-    right: 20px;
-    bottom: 100px;
-    z-index: 50;
-    width: 320px;
-    height: 384px;
-    background-color: white;
-    border-radius: 8px;
-    border: 1px solid black;
-    display: none;
-    flex-direction: column;
-    overflow: hidden;
-    transition: width 0.5s;
+        position: fixed;
+        right: 20px;
+        bottom: 140px;
+        z-index: 50;
+        width: 320px;
+        height: 384px;
+        background-color: white;
+        border-radius: 8px;
+        border: 1px solid black;
+        display: none;
+        flex-direction: column;
+        overflow: hidden;
+        transition: width 0.5s;
     }
 
     #chatbot-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 12px;
-    background-color: #2563eb;
-    color: white;
-    font-weight: bold;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 12px;
+        background-color: {{primary_color}};
+        color: white;
+        font-weight: bold;
     }
 
     .button-chatbot {
-    cursor: pointer;
-    font-size: 20px;
+        margin-inline: 4px;
+        cursor: pointer;
+        transition: color 0.2s;
+    }
+
+    .button-chatbot:hover{
+        color: #cfcfcf;
+    }
+
+    #close-chatbot{
+        font-size: 20px;
+    }
+
+    #maximize-chatbot{
+        font-size: 15px;
+    }
+
+    #button-header{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
     }
 
     #chatbot-body {
-    flex-grow: 1;
-    padding: 16px 8px;
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column;
+        flex-grow: 1;
+        padding: 16px 8px;
+        overflow-y: auto;
+        display: flex;
+        flex-direction: column;
     }
 
     #chatbot-footer {
-    display: flex;
-    padding: 8px;
-    border-top: 1px solid #939393;
+        display: flex;
+        padding: 8px;
+        border-top: 1px solid #939393;
     }
 
     #prompt-input {
-    flex-grow: 1;
-    padding: 8px;
-    margin-right: 8px;
-    border: 1px solid #000;
-    border-radius: 8px;
+        flex-grow: 1;
+        padding: 8px;
+        margin-right: 8px;
+        border: 1px solid #000;
+        border-radius: 8px;
     }
 
     #send-btn {
-    background-color: #2563eb;
-    color: white;
-    padding: 8px 10px;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background-color 0.2s;
+        background-color: {{primary_color}};
+        color: white;
+        padding: 8px 10px;
+        border-radius: 8px;
+        border: 1px solid #000;
+        cursor: pointer;
+        transition: background-color 0.2s;
     }
 
     #send-btn:hover {
-    background-color: #3b82f6;
+        background-color: color-mix(in srgb, {{primary_color}}, black 10%);
     }
 
     .user-message {
-    align-self: flex-end;
-    background-color: #e2e8f0;
-    margin-bottom: 8px;
-    padding: 8px 12px;
-    border-radius: 16px;
-    max-width: 80%;
-    word-break: break-word;
+        align-self: flex-end;
+        background-color: #e2e8f0;
+        margin-bottom: 8px;
+        padding: 8px 12px;
+        border-radius: 16px;
+        max-width: 80%;
+        word-break: break-word;
     }
 
     .bot-message {
-    align-self: flex-start;
-    background-color: #bfdbfe;
-    margin-bottom: 8px;
-    padding: 8px 12px;
-    border-radius: 16px;
-    max-width: 80%;
-    word-break: break-word;
+        align-self: flex-start;
+        background-color: color-mix(in srgb, {{primary_color}}, white 70%);
+        margin-bottom: 8px;
+        padding: 8px 12px;
+        border-radius: 16px;
+        max-width: 80%;
+        word-break: break-word;
     }
 </style>
 <div id="floating-btn">
@@ -115,7 +135,7 @@
 <div id="chatbot">
     <div id="chatbot-header">
         <span>{{title}}</span>
-        <div>
+        <div id="button-header">
             <span id="maximize-chatbot" class="button-chatbot">▢</span>
             <span id="close-chatbot" class="button-chatbot">&times;</span>
         </div>
